--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="hi im henry and i like warm hugs" />
     <meta
@@ -20,21 +21,33 @@
 
     <style>
       body {
-        line-height: 1.3;
-        margin: auto;
-        max-width: 625px;
+        max-width: 66ch;
+        margin: 0 auto;
+        padding: 1rem 1.25rem;
+        line-height: 1.4;
       }
 
-      #root {
-        margin: 15px;
-        margin-top: 80px;
-        margin-bottom: 50px;
+      h1 {
+        margin-bottom: 1.5rem;
+      }
+
+      p {
+        margin: 1rem 0;
+      }
+
+      ul {
+        margin: 0.5rem 0;
+        padding-left: 2.25em;
+      }
+
+      p + ul {
+        margin-top: -0.25rem;
       }
     </style>
   </head>
   <body>
-    <div id="root">
-      <h1>henry trinh</h1>
+    <div>
+      <h2>henry trinh</h2>
       <p>
         hi, welcome to my page! i currently live in SF, enjoy different nut
         butters, listen to EDM, and banter.
@@ -52,30 +65,30 @@
         <a href="https://www.amazon.com/" target="_blank">amazon</a> focusing on
         machine learning, systems, graphics, and full-stack dev.
       </p>
-      <p style="margin-bottom: 0">
+      <p>
         having too many hobbies doesnt interest me because i prefer to get
         really good in what i do. with the start year:
       </p>
-      <ul style="margin-top: 0">
+      <ul>
         <li>climbing & bouldering — 2018</li>
         <li>skiing — 2024</li>
         <li>cooking & baking things that arent too sweet — ~2015</li>
         <li>minesweeper — ~2017</li>
         <li>binge watching shows — ~2013</li>
       </ul>
-      <p style="margin-bottom: 0">
+      <p>
         thats a nice list, but im not perfect at maintaining my hobbies. heres
         my hobby graveyard that i conjure up and revisit from time to time:
       </p>
-      <ul style="margin-top: 0">
+      <ul>
         <li>piano</li>
         <li>ukulele</li>
         <li>geoguessr</li>
         <li>reading</li>
       </ul>
 
-      <p style="margin-bottom: 0">you can reach out to me in a few ways:</p>
-      <p style="margin-top: 0">
+      <p>you can reach out to me in a few ways:</p>
+      <p>
         <a href="mailto:henrymtrinh14@gmail.com" target="_blank">email</a> |
         <a href="https://www.linkedin.com/in/thenry3/" target="_blank"
           >linkedin</a
