--- a/index.html
+++ b/index.html
@@ -49,55 +49,51 @@
     <div>
       <h2>henry trinh</h2>
       <p>
-        hi, welcome to my page! i currently live in SF, enjoy different nut
-        butters, listen to EDM, and banter.
+        hi welcome! i live in SF, enjoy nut butters, listen to EDM, am a mid hybrid athlete, and love em dashes in texts.
       </p>
       <p>
-        my career has led me to build software at
-        <a href="https://watershed.com/" target="_blank">watershed</a>, the
-        enterprise sustainability platform accelerating the world towards a
-        climate economy. previously ive been at
+        currently i serve coffee as a barista at <a href="https://www.instagram.com/deadeyecoffeebar/" target="_blank">dead eye</a>
+        in south city. previously ive been at 
+        <a href="https://convoke.bio/" target="_blank">convoke</a>,
+        <a href="https://watershed.com/" target="_blank">watershed</a>,
         <a href="https://about.google/" target="_blank">google</a>,
         <a href="https://www.twosigma.com/" target="_blank">two sigma</a>,
         <a href="https://www.nuro.ai/" target="_blank">nuro</a>,
         <a href="https://snap.com/en-US" target="_blank">snap inc.</a>,
         <a href="https://www.tesla.com/" target="_blank">tesla</a>, and
         <a href="https://www.amazon.com/" target="_blank">amazon</a> focusing on
-        machine learning, systems, graphics, and full-stack dev.
+        machine learning, systems, graphics, and product/full-stack.
       </p>
+      <p>this is a fun project—check it out! <a href="https://autoscene.henrytrinh.com/" target="_blank">autoscene.henrytrinh.com</a></p>
       <p>
-        having too many hobbies doesnt interest me because i prefer to get
-        really good in what i do. with the start year:
+        having many hobbies doesnt interest me—i prefer to be really good at a few things. here are active hobbies i enjoy + when i started:
       </p>
       <ul>
-        <li>climbing & bouldering — 2018</li>
-        <li>skiing — 2024</li>
-        <li>cooking & baking things that arent too sweet — ~2015</li>
-        <li>minesweeper — ~2017</li>
-        <li>binge watching shows — ~2013</li>
+        <li>climbing – 2018</li>
+        <li>skiing – 2024</li>
+        <li>running – 2024</li>
+        <li>viet cooking – 2015</li>
       </ul>
       <p>
-        thats a nice list, but im not perfect at maintaining my hobbies. heres
-        my hobby graveyard that i conjure up and revisit from time to time:
+        unfortunately life is tough...so here are things i used to like doing: 
       </p>
       <ul>
-        <li>piano</li>
-        <li>ukulele</li>
+        <li>music (piano + ukulele)</li>
         <li>geoguessr</li>
         <li>reading</li>
+        <li>minesweeper</li>
+        <li>baking things that arent too sweet</li>
       </ul>
 
       <p>you can reach out to me in a few ways:</p>
-      <p>
-        <a href="mailto:henrymtrinh14@gmail.com" target="_blank">email</a> |
-        <a href="https://www.linkedin.com/in/thenry3/" target="_blank"
-          >linkedin</a
-        >
-        |
-        <a href="https://www.instagram.com/hernythetrainh/" target="_blank"
+      <ul>
+        <li>henrymtrinh14 [at] gmail
+        <li><a href="https://www.linkedin.com/in/thenry3/" target="_blank"
+          >linkedin</a></li>
+        <li><a href="https://www.instagram.com/hernythetrainh/" target="_blank"
           >instagram</a
-        >
-      </p>
+        ></li>
+      </ul>
     </div>
   </body>
 </html>
